website/versioned_docs/version-0.6.0/cli-reference/gitops_completion_zsh.md
## gitops completion zsh

generate the autocompletion script for zsh

### Synopsis


Generate the autocompletion script for the zsh shell.

If shell completion is not already enabled in your environment you will need
to enable it.  You can execute the following once:

$ echo "autoload -U compinit; compinit" >> ~/.zshrc

To load completions for every new session, execute once:
# Linux:
$ gitops completion zsh > "${fpath[1]}/_gitops"
# macOS:
$ gitops completion zsh > /usr/local/share/zsh/site-functions/_gitops

You will need to start a new shell for this setup to take effect.


```
gitops completion zsh [flags]
```

### Options

```
  -h, --help              help for zsh
      --no-descriptions   disable completion descriptions
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops completion](gitops_completion.md)	 - generate the autocompletion script for the specified shell

###### Auto generated by spf13/cobra on 16-Dec-2021
